Anpassungen W2V und FT

--- a/src/1. Explorative Analysis & Preprocessing/team/test_python_vectorize_functions.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/team/test_python_vectorize_functions.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run vectorize_functions.py"
+    "import vectorize_functions"
    ]
   },
   {
@@ -17,10 +17,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_bow, X_test_bow, y_train_bow, y_test_bow = vectorize_bow()\n",
-    "X_train_tfidf, X_test_tfidf, y_train_tfidf, y_test_tfidf = vectorize_tfidf()\n",
-    "X_train_w2v, X_test_w2v, y_train_w2v, y_test_w2v = vectorize_w2v()\n",
-    "X_train_ft, X_test_ft, y_train_ft, y_test_ft = vectorize_ft()"
+    "X_train_bow, X_test_bow, y_train_bow, y_test_bow = vectorize_functions.vectorize_bow()\n",
+    "X_train_tfidf, X_test_tfidf, y_train_tfidf, y_test_tfidf = vectorize_functions.vectorize_tfidf()\n",
+    "X_train_w2v, X_test_w2v, y_train_w2v, y_test_w2v = vectorize_functions.vectorize_w2v()\n",
+    "X_train_ft, X_test_ft, y_train_ft, y_test_ft = vectorize_functions.vectorize_ft()"
    ]
   },
   {
@@ -85,8 +85,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(19354, 100)\n",
-      "(8295, 100)\n",
+      "(19354, 300)\n",
+      "(8295, 300)\n",
       "(19354,)\n",
       "(8295,)\n",
       "<class 'numpy.ndarray'>\n"
@@ -111,8 +111,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(19354, 100)\n",
-      "(8295, 100)\n",
+      "(19354, 300)\n",
+      "(8295, 300)\n",
       "(19354,)\n",
       "(8295,)\n",
       "<class 'numpy.ndarray'>\n"
@@ -185,19 +185,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-0.07814837  0.19778219  0.16375371 ...  0.29295957 -0.42222694\n",
-      "  -0.60330145]\n",
-      " [ 0.80851864  0.97765596 -0.6431363  ...  0.33107672 -0.2691976\n",
-      "  -0.44218966]\n",
-      " [-0.42487646  0.44140847  0.19626938 ...  0.05067893  0.06511918\n",
-      "   0.04168098]\n",
+      "[[ 0.56796353 -0.15159982  0.07800473 ...  0.0966844   0.62040487\n",
+      "   0.37300337]\n",
+      " [-0.46388891  0.28080626 -0.07317242 ...  0.35617909  0.56261509\n",
+      "  -0.07882277]\n",
+      " [ 0.0529604   0.14233324  0.29700691 ... -0.29135238  0.39866459\n",
+      "  -0.29096323]\n",
       " ...\n",
-      " [ 0.02289515  0.336278   -0.07386641 ... -0.47144998  0.40058638\n",
-      "   0.33623807]\n",
-      " [-0.30298694 -0.13501456 -0.56166826 ... -0.08960265 -0.7880874\n",
-      "  -0.01142927]\n",
-      " [-0.1549235   0.37840678  0.0140697  ... -0.2830156   0.62402952\n",
-      "  -0.13313424]]\n"
+      " [-0.18220278 -0.05024931  0.18015918 ... -0.15773222  0.19344942\n",
+      "  -0.08591651]\n",
+      " [ 0.25784989  0.21942364 -0.06447178 ... -0.00299442  0.17507706\n",
+      "  -0.15309044]\n",
+      " [-0.15790426 -0.01199974  0.16833096 ... -0.01563819  0.06454587\n",
+      "   0.13174285]]\n"
      ]
     }
    ],
@@ -215,19 +215,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[-5.05265296e-02 -6.77033290e-01 -1.22219689e-01 ... -9.47525829e-01\n",
-      "  -2.76858613e-01 -2.83536866e-01]\n",
-      " [ 6.39917772e-02  6.66424885e-01 -6.34130223e-01 ...  5.45947965e-01\n",
-      "   9.01945611e-02  7.34044408e-04]\n",
-      " [-7.39062190e-02  3.22646819e-01 -2.88799298e-01 ... -7.92841963e-02\n",
-      "   2.04668272e-01  4.70877960e-01]\n",
+      "[[ 0.31995967 -0.38688827 -0.30881229 ...  0.13753059  0.34691706\n",
+      "  -0.00566745]\n",
+      " [-1.20015442 -0.36586284 -0.12833088 ...  0.55367259  0.21650805\n",
+      "   1.03176698]\n",
+      " [-0.05482539  0.25548695  0.02865411 ...  0.10370779 -0.04144042\n",
+      "   0.11050702]\n",
       " ...\n",
-      " [-6.09247546e-03  4.36960966e-01 -1.89189431e-01 ...  9.57665547e-02\n",
-      "   1.13818151e-01  3.89277174e-02]\n",
-      " [-7.38326250e-01 -2.87758451e-01 -3.72010455e-01 ... -7.98384473e-03\n",
-      "  -7.45760420e-01  4.21409028e-01]\n",
-      " [-5.54449558e-03  1.53074361e-01 -3.74835118e-01 ...  4.66842860e-02\n",
-      "   5.59791744e-01 -1.22848978e-01]]\n"
+      " [-0.58046529  0.54362163 -0.20929473 ...  0.25916626 -0.22127652\n",
+      "   0.26756146]\n",
+      " [ 0.71055903 -0.50536022 -0.05073958 ... -0.4339434   0.25084631\n",
+      "   0.07350075]\n",
+      " [-0.7840914   0.11735571  0.18459035 ...  0.151709   -0.39526167\n",
+      "   0.20821082]]\n"
      ]
     }
    ],
@@ -277,7 +277,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.9392405063291139\n"
+      "Accuracy:  0.937673297166968\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.941289933694997\n"
+      "Accuracy:  0.9414104882459313\n"
      ]
     }
    ],
@@ -358,7 +358,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.6988547317661242\n"
+      "Accuracy:  0.7083785412899337\n"
      ]
     }
    ],
@@ -381,7 +381,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.9080168776371308\n"
+      "Accuracy:  0.9068113321277879\n"
      ]
     }
    ],
@@ -412,7 +412,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.7310427968655817\n"
+      "Accuracy:  0.7475587703435804\n"
      ]
     }
    ],
@@ -433,7 +433,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.908499095840868\n"
+      "Accuracy:  0.9058468957203134\n"
      ]
     }
    ],
