added checks for amp 2

--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_2_explore_data.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_2_explore_data.ipynb
@@ -961,10 +961,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Nasiba\\AppData\\Local\\Temp\\ipykernel_6480\\130190802.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  amp_tweets['tweet'] = amp_tweets['tweet'].apply(lambda x: html.unescape(x) if isinstance(x, str) else x)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "      <th>tweet</th>\n",
+       "      <th>tweet_cleaned</th>\n",
+       "      <th>user_handle</th>\n",
+       "      <th>hashtags</th>\n",
+       "      <th>emojis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>23</td>\n",
+       "      <td>0</td>\n",
+       "      <td>product of the day: happy man #wine tool  who's   it's the #weekend? time to open up &amp; drink up!</td>\n",
+       "      <td>product happy man wine tool weekend time open amp drink</td>\n",
+       "      <td>0</td>\n",
+       "      <td>['#wine', '#weekend']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63</th>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>@user my wife whom i adore had to miss your poland show because she had surgery. her name is bridget &amp; she's my everything.</td>\n",
+       "      <td>wife adore miss poland show surgery name amp everything</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>81</th>\n",
+       "      <td>83</td>\n",
+       "      <td>1</td>\n",
+       "      <td>how the #altright uses  &amp; insecurity to lure men into #whitesupremacy</td>\n",
+       "      <td>altright use amp man whitesupremacy</td>\n",
+       "      <td>0</td>\n",
+       "      <td>['#altright', '#whitesupremacy']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>109</th>\n",
+       "      <td>112</td>\n",
+       "      <td>1</td>\n",
+       "      <td>@user i'm not interested in a #linguistics that doesn't address #race &amp; . racism is about #power. #raciolinguistics brings…</td>\n",
+       "      <td>interested address race amp racism power bring</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['#linguistics', '#race', '#power', '#raciolinguistics']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>132</td>\n",
+       "      <td>1</td>\n",
+       "      <td>#people aren't protesting #trump because a #republican won-they do so because trump has fuhered  &amp;…</td>\n",
+       "      <td>people protest trump republican trump amp</td>\n",
+       "      <td>0</td>\n",
+       "      <td>['#people', '#trump', '#republican']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27473</th>\n",
+       "      <td>31773</td>\n",
+       "      <td>1</td>\n",
+       "      <td>#hatred,#greed&amp; destroyed many lives,but mad #leadership &amp; bad #government policies have destroyed more. #newyear2017 #politics</td>\n",
+       "      <td>destroy many mad leadership amp bad government policy destroy newyear politic</td>\n",
+       "      <td>0</td>\n",
+       "      <td>['#hatred', '#greed', '#leadership', '#government', '#newyear2017', '#politics']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27485</th>\n",
+       "      <td>31786</td>\n",
+       "      <td>0</td>\n",
+       "      <td>@user doesn't care abt u. let's be honest. he cares about himself &amp; his money!! all of you are getting played.   #neverump</td>\n",
+       "      <td>care u let honest care amp money getting play neverump</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['#neverump']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27550</th>\n",
+       "      <td>31868</td>\n",
+       "      <td>0</td>\n",
+       "      <td>i want some cereal &amp; ain't tryna get up 💀</td>\n",
+       "      <td>want cereal amp tryna get skull</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>:skull:</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27602</th>\n",
+       "      <td>31934</td>\n",
+       "      <td>1</td>\n",
+       "      <td>@user judd is a  &amp; #homophobic #freemilo #milo #freemilo #milo #freemilo #milo #freemilo #milo #freemilo</td>\n",
+       "      <td>amp homophobic freemilo milo freemilo milo freemilo milo freemilo milo freemilo</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['#homophobic', '#freemilo', '#milo', '#freemilo', '#milo', '#freemilo', '#milo', '#freemilo', '#milo', '#freemilo']</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27604</th>\n",
+       "      <td>31936</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ugh i'm trying to enjoy my happy hour drink &amp; there is talks of politics in the bar can we guess what they are discussing ugh!!   hour</td>\n",
+       "      <td>ugh try enjoy happy hour drink amp talk politic bar guess discuss ugh hour</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1284 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id  label  \\\n",
+       "22        23      0   \n",
+       "63        65      0   \n",
+       "81        83      1   \n",
+       "109      112      1   \n",
+       "128      132      1   \n",
+       "...      ...    ...   \n",
+       "27473  31773      1   \n",
+       "27485  31786      0   \n",
+       "27550  31868      0   \n",
+       "27602  31934      1   \n",
+       "27604  31936      0   \n",
+       "\n",
+       "                                                                                                                                        tweet  \\\n",
+       "22                                           product of the day: happy man #wine tool  who's   it's the #weekend? time to open up & drink up!   \n",
+       "63              @user my wife whom i adore had to miss your poland show because she had surgery. her name is bridget & she's my everything.     \n",
+       "81                                                                  how the #altright uses  & insecurity to lure men into #whitesupremacy       \n",
+       "109               @user i'm not interested in a #linguistics that doesn't address #race & . racism is about #power. #raciolinguistics brings…   \n",
+       "128                                      #people aren't protesting #trump because a #republican won-they do so because trump has fuhered  &…    \n",
+       "...                                                                                                                                       ...   \n",
+       "27473         #hatred,#greed& destroyed many lives,but mad #leadership & bad #government policies have destroyed more. #newyear2017 #politics   \n",
+       "27485              @user doesn't care abt u. let's be honest. he cares about himself & his money!! all of you are getting played.   #neverump   \n",
+       "27550                                                                                             i want some cereal & ain't tryna get up 💀     \n",
+       "27602                                @user judd is a  & #homophobic #freemilo #milo #freemilo #milo #freemilo #milo #freemilo #milo #freemilo   \n",
+       "27604  ugh i'm trying to enjoy my happy hour drink & there is talks of politics in the bar can we guess what they are discussing ugh!!   hour   \n",
+       "\n",
+       "                                                                         tweet_cleaned  \\\n",
+       "22                             product happy man wine tool weekend time open amp drink   \n",
+       "63                             wife adore miss poland show surgery name amp everything   \n",
+       "81                                                 altright use amp man whitesupremacy   \n",
+       "109                                     interested address race amp racism power bring   \n",
+       "128                                          people protest trump republican trump amp   \n",
+       "...                                                                                ...   \n",
+       "27473    destroy many mad leadership amp bad government policy destroy newyear politic   \n",
+       "27485                           care u let honest care amp money getting play neverump   \n",
+       "27550                                                  want cereal amp tryna get skull   \n",
+       "27602  amp homophobic freemilo milo freemilo milo freemilo milo freemilo milo freemilo   \n",
+       "27604       ugh try enjoy happy hour drink amp talk politic bar guess discuss ugh hour   \n",
+       "\n",
+       "       user_handle  \\\n",
+       "22               0   \n",
+       "63               1   \n",
+       "81               0   \n",
+       "109              1   \n",
+       "128              0   \n",
+       "...            ...   \n",
+       "27473            0   \n",
+       "27485            1   \n",
+       "27550            0   \n",
+       "27602            1   \n",
+       "27604            0   \n",
+       "\n",
+       "                                                                                                                   hashtags  \\\n",
+       "22                                                                                                    ['#wine', '#weekend']   \n",
+       "63                                                                                                                       []   \n",
+       "81                                                                                         ['#altright', '#whitesupremacy']   \n",
+       "109                                                                ['#linguistics', '#race', '#power', '#raciolinguistics']   \n",
+       "128                                                                                    ['#people', '#trump', '#republican']   \n",
+       "...                                                                                                                     ...   \n",
+       "27473                                      ['#hatred', '#greed', '#leadership', '#government', '#newyear2017', '#politics']   \n",
+       "27485                                                                                                         ['#neverump']   \n",
+       "27550                                                                                                                    []   \n",
+       "27602  ['#homophobic', '#freemilo', '#milo', '#freemilo', '#milo', '#freemilo', '#milo', '#freemilo', '#milo', '#freemilo']   \n",
+       "27604                                                                                                                    []   \n",
+       "\n",
+       "        emojis  \n",
+       "22         NaN  \n",
+       "63         NaN  \n",
+       "81         NaN  \n",
+       "109        NaN  \n",
+       "128        NaN  \n",
+       "...        ...  \n",
+       "27473      NaN  \n",
+       "27485      NaN  \n",
+       "27550  :skull:  \n",
+       "27602      NaN  \n",
+       "27604      NaN  \n",
+       "\n",
+       "[1284 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import html\n",
+    "\n",
+    "# Anwenden der Dekodierung auf die Spalte 'tweet_cleaned'\n",
+    "amp_tweets['tweet'] = amp_tweets['tweet'].apply(lambda x: html.unescape(x) if isinstance(x, str) else x)\n",
+    "amp_tweets"
+   ]
   }
  ],
  "metadata": {
