hinzufügen von lstm, gru und rnn

--- a/src/3. Deep Learning Approach/imran/gru-models.ipynb
+++ b/src/3. Deep Learning Approach/imran/gru-models.ipynb
@@ -78,18 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_cleaned_data = pd.read_csv(\"..\\\\..\\\\..\\\\data\\\\twitter_hate-speech\\\\train_basic_cleaned.csv\")\n",
+    "test_cleaned_data = pd.read_csv(\"..\\\\..\\\\..\\\\data\\\\twitter_hate-speech\\\\test_basic_cleaned.csv\")\n",
+    "\n",
     "X_train_data = train_cleaned_data['tweet']\n",
-    "y_train_data = train_cleaned_data['label']"
+    "y_train_data = train_cleaned_data['label']\n",
+    "\n",
+    "X_test_data = train_cleaned_data['tweet']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,14 +102,16 @@
     "word_index = tokenizer.word_index\n",
     "\n",
     "xtrain_seq = tokenizer.texts_to_sequences(X_train_data)\n",
+    "xtest_seq = tokenizer.texts_to_sequences(X_test_data)\n",
     "\n",
     "max_len = max(len(seq) for seq in xtrain_seq) \n",
-    "xtrain_pad = pad_sequences(xtrain_seq, padding='post', maxlen=max_len)"
+    "xtrain_pad = pad_sequences(xtrain_seq, padding='post', maxlen=max_len)\n",
+    "xtest_pad = pad_sequences(xtest_seq, padding='post', maxlen=max_len)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +153,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Embedding GloVe"
+    "#### Embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_embeddings(file_path, embedding_dim, word_index):\n",
+    "    embedding_index = {}\n",
+    "    with open(file_path, encoding='utf-8') as f:\n",
+    "        for line in f:\n",
+    "            values = line.rstrip().split(' ')\n",
+    "            word = values[0]\n",
+    "            coefs = np.asarray(values[1:], dtype='float32')\n",
+    "            embedding_index[word] = coefs\n",
+    "\n",
+    "    embedding_matrix = np.zeros((len(word_index) + 1, embedding_dim))\n",
+    "    for word, i in word_index.items():\n",
+    "        embedding_vector = embedding_index.get(word)\n",
+    "        if embedding_vector is not None:\n",
+    "            embedding_matrix[i] = embedding_vector\n",
+    "\n",
+    "    return embedding_index, embedding_matrix\n"
    ]
   },
   {
@@ -165,34 +195,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('loading word embeddings...')\n",
-    "\n",
-    "embeddings_index = {}\n",
-    "f = codecs.open('glove.6B.300d.txt', encoding='utf-8')\n",
-    "\n",
-    "for line in tqdm(f):\n",
-    "    values = line.rstrip().rsplit(' ')\n",
-    "    word = values[0]\n",
-    "    coefs = np.asarray(values[1:], dtype='float32')\n",
-    "    embeddings_index[word] = coefs\n",
-    "f.close()\n",
-    "\n",
-    "print('found %s word vectors' % len(embeddings_index))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Embedding fastText"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
    "outputs": [],
@@ -205,24 +207,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Models"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('loading word embeddings...')\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Embedding, SimpleRNN, LSTM, GRU, Dense, SpatialDropout1D\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "\n",
-    "embeddings_index = {}\n",
-    "f = codecs.open('wiki-news-300d-1M.vec', encoding='utf-8')\n",
+    "# Funktion für RNN\n",
+    "def train_rnn_model(x_train, y_train, x_val, y_val, word_index, max_len, embedding_matrix=None, embedding_dim=300, epochs=5, batch_size=64):\n",
+    "    model = Sequential()\n",
+    "    if embedding_matrix is not None:\n",
+    "        model.add(Embedding(input_dim=len(word_index) + 1,\n",
+    "                            output_dim=embedding_dim,\n",
+    "                            weights=[embedding_matrix],\n",
+    "                            input_length=max_len,\n",
+    "                            trainable=False))\n",
+    "    else:\n",
+    "        model.add(Embedding(input_dim=len(word_index) + 1,\n",
+    "                            output_dim=embedding_dim,\n",
+    "                            input_length=max_len))\n",
+    "    model.add(SimpleRNN(100))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=Adam(), metrics=['accuracy'])\n",
     "\n",
-    "for line in tqdm(f):\n",
-    "    values = line.rstrip().rsplit(' ')\n",
-    "    word = values[0]\n",
-    "    coefs = np.asarray(values[1:], dtype='float32')\n",
-    "    embeddings_index[word] = coefs\n",
-    "f.close()\n",
+    "    model.summary()\n",
+    "    model.fit(x_train, y_train, epochs=epochs, batch_size=batch_size, validation_data=(x_val, y_val))\n",
+    "    y_pred = model.predict(x_val)\n",
+    "    print(\"AUC: %.2f%%\" % (roc_auc_score(y_val, y_pred) * 100))\n",
+    "    return model\n",
     "\n",
-    "print('found %s word vectors' % len(embeddings_index))"
+    "# Funktion für LSTM\n",
+    "def train_lstm_model(x_train, y_train, x_val, y_val, word_index, max_len, embedding_matrix=None, embedding_dim=300, epochs=5, batch_size=64):\n",
+    "    model = Sequential()\n",
+    "    if embedding_matrix is not None:\n",
+    "        model.add(Embedding(input_dim=len(word_index) + 1,\n",
+    "                            output_dim=embedding_dim,\n",
+    "                            weights=[embedding_matrix],\n",
+    "                            input_length=max_len,\n",
+    "                            trainable=False))\n",
+    "    else:\n",
+    "        model.add(Embedding(input_dim=len(word_index) + 1,\n",
+    "                            output_dim=embedding_dim,\n",
+    "                            input_length=max_len))\n",
+    "    model.add(LSTM(100))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=Adam(), metrics=['accuracy'])\n",
+    "\n",
+    "    model.summary()\n",
+    "    model.fit(x_train, y_train, epochs=epochs, batch_size=batch_size, validation_data=(x_val, y_val))\n",
+    "    y_pred = model.predict(x_val)\n",
+    "    print(\"AUC: %.2f%%\" % (roc_auc_score(y_val, y_pred) * 100))\n",
+    "    return model\n",
+    "\n",
+    "# Funktion für GRU\n",
+    "def train_gru_model(x_train, y_train, x_val, y_val, word_index, max_len, embedding_matrix=None, embedding_dim=300, epochs=5, batch_size=64):\n",
+    "    model = Sequential()\n",
+    "    if embedding_matrix is not None:\n",
+    "        model.add(Embedding(input_dim=len(word_index) + 1,\n",
+    "                            output_dim=embedding_dim,\n",
+    "                            weights=[embedding_matrix],\n",
+    "                            input_length=max_len,\n",
+    "                            trainable=False))\n",
+    "    else:\n",
+    "        model.add(Embedding(input_dim=len(word_index) + 1,\n",
+    "                            output_dim=embedding_dim,\n",
+    "                            input_length=max_len))\n",
+    "    model.add(SpatialDropout1D(0.3))\n",
+    "    model.add(GRU(100))\n",
+    "    model.add(Dense(1, activation='sigmoid'))\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=Adam(), metrics=['accuracy'])\n",
+    "\n",
+    "    model.summary()\n",
+    "    model.fit(x_train, y_train, epochs=epochs, batch_size=batch_size, validation_data=(x_val, y_val))\n",
+    "    y_pred = model.predict(x_val)\n",
+    "    print(\"AUC: %.2f%%\" % (roc_auc_score(y_val, y_pred) * 100))\n",
+    "    return model\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "glove_file_path = 'glove.6B.300d.txt'\n",
+    "fasttext_file_path = 'wiki-news-300d-1M.vec'\n",
+    "embedding_dim = 300\n",
+    "glove_embedding_index, glove_embedding_matrix = load_embeddings(glove_file_path, embedding_dim, word_index)\n",
+    "fasttext_embedding_index, fasttext_embedding_matrix = load_embeddings(fasttext_file_path, embedding_dim, word_index)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RNN mit GloVe Embeddings\n",
+    "rnn_model = train_rnn_model(X_train_resampled, y_train_resampled, X_val, y_val, word_index, max_len, embedding_matrix=glove_embedding_matrix)\n",
+    "\n",
+    "# LSTM ohne vorgefertigte Embeddings\n",
+    "lstm_model = train_lstm_model(X_train_resampled, y_train_resampled, X_val, y_val, word_index, max_len)\n",
+    "\n",
+    "# GRU mit FastText Embeddings\n",
+    "gru_model = train_gru_model(X_train_resampled, y_train_resampled, X_val, y_val, word_index, max_len, embedding_matrix=fasttext_embedding_matrix)\n"
    ]
   }
  ],
