zusammenfassung data exploration

--- a/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_clean_data.ipynb
+++ b/src/1. Explorative Analysis & Preprocessing/nasiba/notebooks/1_1_clean_data.ipynb
@@ -29,10 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import os\n",
     "current_dir = os.getcwd()\n",
     "src_path = os.path.abspath(os.path.join(current_dir, '../../../1. Explorative Analysis & Preprocessing/nasiba/'))\n",
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:40.171972400Z",
@@ -74,7 +75,7 @@
     "import spacy\n",
     "\n",
     "\n",
-    "from src.preprocessing.cleaning.clean_data_generic_functions import clean_misspelled_words, correct_misspelled_words_in_sentence,create_word_counter,expand_slang,expand_shortcuts,extract_emojis, to_lowercase, to_lowercase_if_string, handle_hashtags, handle_userhandles, lemmatize\n",
+    "from src.preprocessing.cleaning.clean_data_generic_functions import clean_misspelled_words, correct_misspelled_words_in_sentence,create_word_counter,expand_slang,expand_shortcuts,extract_emojis, to_lowercase, to_lowercase_if_string, handle_hashtags, handle_userhandles, lemmatize, remove_word_from_column\n",
     "from src.preprocessing.cleaning.clean_data_generic_functions import remove_special_characters, remove_digits, remove_duplicates, remove_emoji_in_sentence, remove_emojis, remove_freqwords,remove_hashtag_sign_from_tweet,remove_least_frequent_words, remove_most_frequent_words, remove_punctuation, remove_stop_words, remove_url_from_tweet, replace_emoji_in_sentence, replace_emojis\n",
     "\n",
     "\n",
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:40.443971100Z",
@@ -122,7 +123,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:40.554972200Z",
@@ -165,9 +166,8 @@
    "outputs": [],
    "source": [
     "\n",
-    "\n",
-    "csv_path_train = os.path.abspath(os.path.join(current_dir, '../../../data/twitter_hate-speech/train.csv'))\n",
-    "df_origin = pd.read_csv(csv_path_train, encoding='utf-8', index_col=0)"
+    "source_filepath_name = os.path.abspath(os.path.join(src_path, 'data/train.csv'))\n",
+    "df_origin = pd.read_csv(source_filepath_name, encoding='utf-8', index_col=0)"
    ]
   },
   {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:40.748969900Z",
@@ -191,8 +191,8 @@
    },
    "outputs": [],
    "source": [
-    "csv_path_test = os.path.abspath(os.path.join(current_dir, '../../../data/twitter_hate-speech/test.csv'))\n",
-    "df_origin_test = pd.read_csv(csv_path_test, encoding='utf-8', index_col=0)"
+    "source_filepath_name_test = os.path.abspath(os.path.join(src_path, 'data/test.csv'))\n",
+    "df_origin_test = pd.read_csv(source_filepath_name_test, encoding='utf-8', index_col=0)"
    ]
   },
   {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:45.895945100Z",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:45.905996100Z",
@@ -253,7 +253,7 @@
        "0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:48.371485800Z",
@@ -318,27 +318,19 @@
     "    e. Sonderzeichen\n",
     "    f. Zeilenumbrüche\n",
     "    g. Zahlen\n",
+    "    h. das Wort amp\n",
     "9. Stemming / Lemmatization\n",
     "10. Stopwords entfernen\n",
     "11. Most frequent words entfernen\n",
     "12. Rare words entfernen\n",
     "13. Nochmal Duplikate prüfen & entfernen\n",
     "\n",
-    "df_cleaned = find_stop_words(df_cleaned)\n",
-    "df_cleaned = find_hash_tags(df_cleaned)\n",
-    "df_cleaned = find_html_tags(df_cleaned)\n",
-    "df_cleaned = find_urls(df_cleaned)\n",
-    "df_cleaned = find_shortcuts(df_cleaned)\n",
-    "df_cleaned = find_emojis(df_cleaned)\n",
-    "df_cleaned = find_misspelled_words(df_cleaned)\n",
-    "df_cleaned = word_count(df_cleaned)\n",
-    "\n",
     "Lemmatization: https://www.geeksforgeeks.org/python-lemmatization-approaches-with-examples/"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:22:48.436489200Z",
@@ -356,8 +348,8 @@
     "    df_cleaned = to_lowercase(df_cleaned,'tweet_cleaned')\n",
     "    print(\"Cleaning Step 2/18: expand_shortcuts\")\n",
     "    df_cleaned = expand_shortcuts(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 3/18: remove_negations - SKIP\")\n",
-    "    # df_cleaned = remove_negations(df_cleaned)\n",
+    "    # print(\"Cleaning Step 3/18: remove_negations - SKIP\")\n",
+    "    # # df_cleaned = remove_negations(df_cleaned)\n",
     "    print(\"Cleaning Step 4/18: handle_userhandles\")\n",
     "    df_cleaned = handle_userhandles(df_cleaned,'tweet_cleaned')\n",
     "    print(\"Cleaning Step 5/18: handle_hashtags\")\n",
@@ -376,8 +368,8 @@
     "    df_cleaned = remove_special_characters(df_cleaned, 'tweet_cleaned')\n",
     "    print(\"Cleaning Step 12/18: remove_digis\")\n",
     "    df_cleaned = remove_digits(df_cleaned,'tweet_cleaned')\n",
-    "    print(\"Cleaning Step 13/18: clean_misspelled_words - SKIP\")\n",
-    "    # df_cleaned = clean_misspelled_words(df_cleaned) # ???\n",
+    "    print(\"Cleaning Step 13/18: remove_word_from_column: amp\")\n",
+    "    df_cleaned = remove_word_from_column(df=df_cleaned, column_name=\"tweet_cleaned\",word=\"amp\")\n",
     "    print(\"Cleaning Step 14/18: lemmatize\")\n",
     "    df_cleaned = lemmatize(df_cleaned,'tweet_cleaned')\n",
     "    print(\"Cleaning Step 15/18: remove_stop_words\")\n",
@@ -402,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +404,6 @@
       "Start Cleaning\n",
       "Cleaning Step 1/18: to_lowercase\n",
       "Cleaning Step 2/18: expand_shortcuts\n",
-      "Cleaning Step 3/18: remove_negations - SKIP\n",
       "Cleaning Step 4/18: handle_userhandles\n",
       "Cleaning Step 5/18: handle_hashtags\n",
       "Cleaning Step 6/18: extract_emojis\n",
@@ -422,7 +413,7 @@
       "Cleaning Step 10/18: remove_punctuation\n",
       "Cleaning Step 11/18: remove_special_characters\n",
       "Cleaning Step 12/18: remove_digis\n",
-      "Cleaning Step 13/18: clean_misspelled_words - SKIP\n",
+      "Cleaning Step 13/18: remove_word_from_column: amp\n",
       "Cleaning Step 14/18: lemmatize\n",
       "Cleaning Step 15/18: remove_stop_words\n",
       "Cleaning Step 16/18: remove_most_frequent_words\n",
@@ -446,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +447,6 @@
       "Start Cleaning\n",
       "Cleaning Step 1/18: to_lowercase\n",
       "Cleaning Step 2/18: expand_shortcuts\n",
-      "Cleaning Step 3/18: remove_negations - SKIP\n",
       "Cleaning Step 4/18: handle_userhandles\n",
       "Cleaning Step 5/18: handle_hashtags\n",
       "Cleaning Step 6/18: extract_emojis\n",
@@ -466,7 +456,7 @@
       "Cleaning Step 10/18: remove_punctuation\n",
       "Cleaning Step 11/18: remove_special_characters\n",
       "Cleaning Step 12/18: remove_digis\n",
-      "Cleaning Step 13/18: clean_misspelled_words - SKIP\n",
+      "Cleaning Step 13/18: remove_word_from_column: amp\n",
       "Cleaning Step 14/18: lemmatize\n",
       "Cleaning Step 15/18: remove_stop_words\n",
       "Cleaning Step 16/18: remove_most_frequent_words\n",
@@ -489,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T09:28:14.696353600Z",
@@ -508,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-11-03T11:56:11.242992900Z",
